# jira-ticket-fetch

./: Cargo.toml  LICENSE  README.md
src/: app.rs  config.rs  events.rs  git.rs  jira.rs  main.rs  state.rs  ui.rs
src/utils/: event.rs  mod.rs
