[package]
name = "jira-ticket-fetch"
version = "0.1.0"
authors = ["iterion <iterion@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
goji = "0.2"
git2 = "0.13"
anyhow = "1.0.34"
tui = "0.13.0"
app_dirs = "1.2.1"
termion = "1.5.5"

[[bin]]
name = "git-branch-from-jira"
path = "src/main.rs"
