[package]
name = "jira-ticket-fetch"
version = "0.1.0"
authors = ["iterion <iterion@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.13"
anyhow = "1.0.34"
tui = { version = "0.13.0", features = ["crossterm"] }
app_dirs = "1.2.1"
crossterm = { version = "0.18", features = ["event-stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
tokio = { version = "1.2", features = ["rt-multi-thread", "macros"] }

[dependencies.goji]
git = "https://github.com/iterion/goji"
branch = "async-update"

[[bin]]
name = "git-branch-from-jira"
path = "src/main.rs"
